--- a/index.fim.html
+++ b/index.fim.html
@@ -4,18 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>Projeto Dashboard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Porjeto Dashboard</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
     <nav class="mainNav">
-        <a href="index.html" class="mainNav_linkLogo">DashBoard</a>
+        <a href="index.html" class="mainNav_linkLogo">Dashboard</a>
 
         <div class="mainNav_menus">
             <ul class="mainNav_menu">
@@ -26,7 +24,9 @@
                                 d="M14.25 19.499V14.999C14.25 14.8001 14.171 14.6093 14.0303 14.4686C13.8897 14.328 13.6989 14.249 13.5 14.249H10.5C10.3011 14.249 10.1103 14.328 9.96967 14.4686C9.82902 14.6093 9.75 14.8001 9.75 14.999V19.499C9.75 19.6979 9.67098 19.8887 9.53033 20.0293C9.38968 20.17 9.19891 20.249 9 20.249H4.5C4.30109 20.249 4.11032 20.17 3.96967 20.0293C3.82902 19.8887 3.75 19.6979 3.75 19.499V10.8271C3.75168 10.7233 3.77411 10.6209 3.81597 10.5259C3.85783 10.4309 3.91828 10.3453 3.99375 10.274L11.4937 3.45836C11.632 3.33187 11.8126 3.26172 12 3.26172C12.1874 3.26172 12.368 3.33187 12.5062 3.45836L20.0062 10.274C20.0817 10.3453 20.1422 10.4309 20.184 10.5259C20.2259 10.6209 20.2483 10.7233 20.25 10.8271V19.499C20.25 19.6979 20.171 19.8887 20.0303 20.0293C19.8897 20.17 19.6989 20.249 19.5 20.249H15C14.8011 20.249 14.6103 20.17 14.4697 20.0293C14.329 19.8887 14.25 19.6979 14.25 19.499Z"
                                 stroke="#5A5A5F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
-                        dashboard</a>
+
+                        Dashboard
+                    </a>
                 </li>
 
                 <li>
@@ -42,7 +42,9 @@
                             <path d="M3.75 6.75H20.25" stroke="#5A5A5F" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" />
                         </svg>
-                        Announced</a>
+
+                        Announced
+                    </a>
                 </li>
 
                 <li>
@@ -56,7 +58,9 @@
                                 d="M20.25 11.25V19.5C20.25 19.6989 20.171 19.8897 20.0303 20.0303C19.8897 20.171 19.6989 20.25 19.5 20.25H4.5C4.30109 20.25 4.11032 20.171 3.96967 20.0303C3.82902 19.8897 3.75 19.6989 3.75 19.5V4.5C3.75 4.30109 3.82902 4.11032 3.96967 3.96967C4.11032 3.82902 4.30109 3.75 4.5 3.75H12.75"
                                 stroke="#5A5A5F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
-                        Preparation</a>
+
+                        Preparation
+                    </a>
                 </li>
 
                 <li>
@@ -75,7 +79,9 @@
                             <path d="M8.625 16.5L5.37187 19.5L3.75 18" stroke="#5A5A5F" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
-                        Sorted</a>
+
+                        Sorted
+                    </a>
                 </li>
 
                 <li>
@@ -101,10 +107,10 @@
                                 d="M16.5 11.25H22.5V17.25C22.5 17.4489 22.421 17.6397 22.2803 17.7803C22.1397 17.921 21.9489 18 21.75 18H19.875"
                                 stroke="#5A5A5F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
-                        Distributed</a>
+
+                        Distributed
+                    </a>
                 </li>
-
-
             </ul>
 
             <ul class="mainNav_menu">
@@ -119,15 +125,17 @@
                                 d="M9.75 20.25H4.5C4.30109 20.25 4.11032 20.171 3.96967 20.0303C3.82902 19.8897 3.75 19.6989 3.75 19.5V4.5C3.75 4.30109 3.82902 4.11032 3.96967 3.96967C4.11032 3.82902 4.30109 3.75 4.5 3.75H9.75"
                                 stroke="#5A5A5F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
-                        Logout</a>
+
+                        Logout
+                    </a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <header class="topNav">
+    <header class="topnav">
         <nav>
-            <ul class="topNav_menu ">
+            <ul class="topnav_menu">
                 <li>
                     <a href="#">
                         <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -138,6 +146,7 @@
                                 d="M2.90625 20.7508C3.82775 19.1544 5.15328 17.8287 6.74958 16.907C8.34588 15.9853 10.1567 15.5 12 15.5C13.8433 15.5 15.6541 15.9853 17.2504 16.907C18.8467 17.8287 20.1722 19.1544 21.0938 20.7508"
                                 stroke="#5A5A5F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
+
                         Profile
                     </a>
                 </li>
@@ -152,6 +161,7 @@
                                 d="M17.7195 6.60156C17.957 6.82031 18.182 7.04531 18.3945 7.27656L20.9538 7.64219C21.3708 8.36641 21.6923 9.14161 21.9101 9.94844L20.3538 12.0203C20.3538 12.0203 20.382 12.6578 20.3538 12.9766L21.9101 15.0484C21.6933 15.8556 21.3718 16.6309 20.9538 17.3547L18.3945 17.7203C18.3945 17.7203 17.9538 18.1797 17.7195 18.3953L17.3538 20.9547C16.6296 21.3717 15.8544 21.6931 15.0476 21.9109L12.9757 20.3547C12.6576 20.3828 12.3376 20.3828 12.0195 20.3547L9.94758 21.9109C9.14042 21.6941 8.36509 21.3727 7.64133 20.9547L7.27571 18.3953C7.04446 18.1766 6.81946 17.9516 6.60071 17.7203L4.04133 17.3547C3.62432 16.6305 3.30289 15.8553 3.08508 15.0484L4.64133 12.9766C4.64133 12.9766 4.61321 12.3391 4.64133 12.0203L3.08508 9.94844C3.30188 9.14127 3.62336 8.36594 4.04133 7.64219L6.60071 7.27656C6.81946 7.04531 7.04446 6.82031 7.27571 6.60156L7.64133 4.04219C8.36556 3.62517 9.14076 3.30375 9.94758 3.08594L12.0195 4.64219C12.3376 4.61406 12.6576 4.61406 12.9757 4.64219L15.0476 3.08594C15.8547 3.30274 16.6301 3.62421 17.3538 4.04219L17.7195 6.60156Z"
                                 stroke="#5A5A5F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
+
                         Settings
                     </a>
                 </li>
@@ -159,12 +169,12 @@
         </nav>
 
         <section class="perfil">
-            <div class="perfil_tumb">
-                <img src="./imagens/perfil.png" alt="Foto de perfil">
+            <div class="perfil_thumb">
+                <img src="imagens/perfil.png" alt="">
             </div>
             <div>
-                <div class="perfil_name">Luiz Fernando</div>
-                <div class="perfil_rule">Front-End</div>
+                <div class="perfil_name">Daniel Morales</div>
+                <div class="perfil_rule">Front-end</div>
             </div>
         </section>
     </header>
@@ -172,37 +182,39 @@
     <main>
         <section class="summary">
             <article>
-                <span class="description">Announced today</span>
-                <span class="number">235600</span>
+                <span class="summary_description">Announced Today</span>
+                <span class="summary_number">2356008</span>
             </article>
 
-            <div class="separeted"></div>
+            <div class="summary_separated"></div>
 
             <article>
-                <span class="description">Prepared Today</span>
-                <span class="number">16738</span>
+                <span class="summary_description">Prepared Today</span>
+                <span class="summary_number">16738</span>
             </article>
 
-            <div class="separeted"></div>
+            <div class="summary_separated"></div>
 
             <article>
-                <span class="description">Sorted today</span>
-                <span class="number">286</span>
+                <span class="summary_description">Sorted Today</span>
+                <span class="summary_number">286</span>
             </article>
 
-            <a href="#" class="btn">See more</a>
+            <a href="#" class="btn summary_btn">See more</a>
+
+
         </section>
 
         <figure>
-            <img src="imagens/chart1.png" alt="Grafico 1">
+            <img src="imagens/chart1.png" alt="chart 1">
         </figure>
 
         <figure class="grid-half">
-            <img src="imagens/chart2.png" alt="Grafico 2">
+            <img src="imagens/chart2.png" alt="chart 2">
         </figure>
 
         <figure class="grid-half">
-            <img src="imagens/chart3.png" alt="Grafico 3">
+            <img src="imagens/chart3.png" alt="chart 3">
         </figure>
     </main>
 </body>
